# code_djinn

./: Makefile  README.md  config_examply.py  migration_progress.md  multi_step_tasks.md  parser_config_example.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: README.md  dependabot.yml
.github/workflows/: build-test.yml  homebrew-update.yml  publish-to-homebrew.yml  publish-to-pypi.yml  test.yml
codedjinn/: __init__.py  commands.py  config.py  djinn.py  llmfactory.py  main.py  parser.py  prompt_template.py  utils.py
codedjinn/context/: __init__.py  ask_prompt.py  contextualiser.py  parser.py  run_prompt.py  step_budget.py
codedjinn/core/: __init__.py  agent.py  agent_service.py  chat_session.py  client_cache.py  command_executor.py  configs.py  djinn.py  input_prompt.py  llm_cache.py  parser.py  policy.py  policy_engine.py  prompt_builder.py  response_parser.py  session.py  tool_registry.py
codedjinn/daemon/: __init__.py  client.py  protocol.py  server.py  state.py
codedjinn/modes/: __init__.py  base_mode.py  chat_mode.py  execution_mode.py  question_mode.py  run_mode.py
codedjinn/policies/: __init__.py  balanced_policy.py  base_policy.py  loose_policy.py  strict_policy.py
codedjinn/prompts/: __init__.py  ask_prompt.py  context_builder.py  prompt_components.py  step_budget.py  system_prompt.py
codedjinn/providers/: __init__.py  gemini.py  mistral.py  model.py  parameter_manager.py
codedjinn/tools/: __init__.py  ask_executor.py  exec_shell.py  observe_executor.py  output_trimmer.py  registry.py
codedjinn/ui/: __init__.py  cli.py  config_commands.py  context_commands.py  output.py  prompts.py
codedjinn/utils/: __init__.py  detection.py
scripts/: README.md  prepare_release.py  run_tests.py
tests/: __init__.py  test_chat_response_parser.py  test_command_executor.py  test_commands.py  test_config.py  test_llmfactory.py  test_prompt_builder.py  test_step_budget_fast_mode.py  test_utils.py
tests/core/: test_prompt_builder.py  test_response_parser.py
tests/daemon/: __init__.py
(+9 files in other folders)
