[tool.poetry]
name = "codedjinn"
version = "0.1.0"
description = "A CLI tool to solve simple code questions within the terminal using LLM models"
authors = ["phisanti <tisalon@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = {extras = ["llm"], version = "^0.0.317"}
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
code_djinn = 'codedjinn.main:code_djinn'