[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code_djinn"
version = "0.3.0"
description = "High-performance CLI assistant for generating shell commands using LLM models"
authors = [
    {name = "phisanti", email = "tisalon@outlook.com"}
]
license = {text = "MIT"}
readme = {file = "README.md", content-type = "text/markdown; charset=UTF-8"}
requires-python = ">=3.10"
dependencies = [
    "mistralai>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
process-title = ["setproctitle>=1.3.0"]

[project.scripts]
code-djinn = "codedjinn.ui.cli:run"

[tool.setuptools.packages.find]
include = ["codedjinn*"]
exclude = ["agno*", "tests*", "scripts*", "experiments*"]
